@@ -136,6 +136,7 @@ src/Makefile
 src/egxp/Makefile
 src/xmpp/Makefile
 src/xmpp-im/Makefile
+src/core/Makefile
 src/gui/Makefile
 doc/Makefile
 ])
