@@ -4,11 +4,15 @@
 #include "egxp/egxp.h"
 
 
+
 int eim_config_init (Egxp * eg);
 
 
 void eim_config_save ();
 
+
 void eim_config_shutdown ();
+
+
 
 #endif
