@@ -27,7 +27,7 @@
 
 #include "egxp/egxp.h"
 #include "gui/gui_main.h"
-#include "conf.h"
+//#include "conf.h"
 
 
 static int eim_handler_signal_exit (void *data, int ev_type, void *ev) {
@@ -105,7 +105,7 @@ int main (int argc, char **argv) {
 
   Egxp * eg = egxp_new ();
 
-  eim_config_init (eg);
+  // eim_config_init (eg);
   
 
   if (gui_main_init2 ("eim", theme_file)) return -1;
@@ -115,7 +115,7 @@ int main (int argc, char **argv) {
   printf("Here\n");
 
   /* shutdown all ecore service */
-  eim_config_shutdown ();
+  // eim_config_shutdown ();
   ewl_shutdown ();
   ecore_shutdown ();
   
