@@ -1,3 +1,8 @@
+2005-06-03(jol):
+	- create the core directory, it should contains all stuff about
+	  eim. Begin to think about core structure and how to save in good
+	  way all account information. You can take a look at the TODO file.
+	
 2005-05-30(jol):
 	- begin the config stuff
 	- fix compilation error
